modules/gdscript/tests/scripts/parser/errors/variable_conflicts_constant.gd
func test():
	final TEST = 25
	var TEST = 50
